Ajout de test 4.4